# dino-park-packs

./: .dockerignore  .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.local  README.md  buildspec.yml  diesel.toml  do.sh  myke.yml  openapi.yml
.github/workflows/: rust.yml
ci/: install_deps.sh
db-tests/: Cargo.toml  build.rs
db-tests/tests/: api.rs  basics.rs  cis.rs  helpers.rs  lib.rs  requests.rs  users.rs
db-tests/tests/internal/: rules.rs
dev/: docker-compose.yml  settings.json
docs/: openapi.yml  sudo.yml
k8s/: Chart.yaml  values.yaml
k8s/templates/: 01-pg-dev.yaml  cron.yaml  deployment.yaml  service.yaml
k8s/values/: dev.yaml  prod.yaml  test.yaml
migrations/2019-09-25-142615_groups/: down.sql  up.sql
migrations/2019-12-16-101437_logs/: down.sql  up.sql
migrations/2020-02-14-142048_groupslist/: down.sql  up.sql
migrations/2020-03-04-081140_reviewed/: up.sql
migrations/2020-06-18-125408_constaints/: down.sql  up.sql
migrations/2020-07-13-182038_mozillianscompat/: down.sql  up.sql
migrations/2020-08-25-110359_nonnda/: down.sql  up.sql
migrations/2020-09-16-123812_noanonymous/: down.sql  up.sql
scripts/: mozillians_sql.sh  upload.sh
src/: error.rs  healthz.rs  lib.rs  main.rs  settings.rs  some.rs  types.rs  user.rs  utils.rs
src/api/: admins.rs  current.rs  error.rs  forms.rs  groups.rs  info.rs  internal.rs  invitations.rs  members.rs  mod.rs  models.rs  requests.rs  sudo.rs  terms.rs  users.rs  views.rs
src/cis/: operations.rs
src/db/: db.rs  error.rs  group.rs  logs.rs  mod.rs  model.rs  operations.rs  schema.rs  types.rs  users.rs  views.rs
src/db/internal/: admin.rs  expiration.rs  group.rs  invitation.rs  log.rs  member.rs  mod.rs  raw.rs  request.rs  terms.rs  user.rs
src/db/operations/: admins.rs  error.rs  expirations.rs  groups.rs  invitations.rs  logs.rs  members.rs  mod.rs  models.rs  raws.rs  requests.rs  terms.rs  users.rs
src/db/operations/internal/: admin.rs  group.rs  invitation.rs  member.rs  mod.rs  terms.rs  user.rs
src/groups/: group.rs  mod.rs  operations.rs  schema.rs
src/import/: api.rs  mod.rs  ops.rs  tsv.rs
src/mail/: manager.rs  mod.rs  send.rs  templates.rs
src/rules/: engine.rs  error.rs  functions.rs  mod.rs  rules.rs
static/: form.html
terraform/: INFRA.md
terraform/codebuild/: .terraform.lock.hcl  provider.tf  variables.tf
terraform/dev/: data.tf  iam.tf  provider.tf  ssm.tf
terraform/prod/: data.tf  db.tf  iam.tf  provider.tf
terraform/test/: data.tf  db.tf  iam.tf  provider.tf  ssm.tf
tests/: all.rs
tests/api/: anonmail.rs  basics.rs  create.rs  delete.rs  details.rs  errors.rs  expiration.rs  groups.rs  import.rs  inactive.rs  invitations.rs  join.rs  mod.rs  requests.rs  revoke.rs  sudo.rs  upgrade.rs
tests/data/import-test/: c.tsv  g.tsv  m.tsv
tests/helpers/: api.rs  cis.rs  db.rs  misc.rs  mod.rs  sudo.rs  users.rs
tests/internal/: rules.rs
