[package]
name = "dino-park-packs"
version = "0.3.0"
authors = ["Florian Merz <flomerz@gmail.com>"]
edition = "2018"

[features]
default = []
localuserscope = ["dino_park_gate/localuserscope"]

[dependencies]
cis_client = { git = "https://github.com/mozilla-iam/cis_client-rust", branch = "0.4.0", version = "0.4.0" }
cis_profile = { git = "https://github.com/mozilla-iam/cis_profile-rust", branch = "0.3.1", version = "0.3.1", features = ["aws", "vendored"] }
dino_park_gate = { git = "https://github.com/mozilla-iam/dino-park-gate", tag = "0.4.0", version = "0.4.0" }
dino_park_trust = { git = "https://github.com/mozilla-iam/dino-park-trust", tag = "0.0.4", version = "0.0.4" }
dino_park_guard = { git = "https://github.com/mozilla-iam/dino-park-guard", tag = "0.0.1", version = "0.0.1" }
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono", "serde_json"] }
diesel_migrations = "1.4"
actix-web = "2.0"
actix-rt = "1.0"
actix-cors = "0.2"
actix-multipart = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
log = "0.4"
env_logger = "0.7"
failure = "0.1"
failure_derive = "0.1"
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
futures = "0.3"
r2d2 = "0.8"
config = "0.10"
chrono = "0.4"
