[package]
name = "dino-park-packs"
version = "0.5.14"
authors = ["Florian Merz <flomerz@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dino-park-packs"
path = "src/main.rs"

[features]
default = []
local = ["dino_park_gate/localuserscope"]

[dependencies]
cis_client = { git = "https://github.com/mozilla-iam/cis_client-rust", tag = "0.9.1", version = "0.9.1" }
cis_profile = { git = "https://github.com/mozilla-iam/cis_profile-rust", tag = "0.6.2", version = "0.6.2", features = ["aws", "vendored"] }
dino_park_gate = { git = "https://github.com/mozilla-iam/dino-park-gate", tag = "0.10.8", version = "0.10.8" }
dino_park_guard = { git = "https://github.com/mozilla-iam/dino-park-guard", tag = "0.5.7", version = "0.5.7" }
dino_park_trust = { git = "https://github.com/mozilla-iam/dino-park-trust", tag = "0.1.1", version = "0.1.1" }
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono", "serde_json"] }
lexical-core = "0.7.5"
diesel_migrations = "1.4"

actix-web = "4.10.2"
actix-rt = "2.10.0"
actix-multipart = "0.7"
actix-http = "3.10.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4"
env_logger = "0.7"
failure = "0.1"
failure_derive = "0.1"
diesel-derive-enum = { version = "1", features = ["postgres"] }
futures = "0.3"
r2d2 = "0.8"
config = "0.12"
chrono = "0.4.38"
rusoto_core = "0.45"
rusoto_ses = "0.45"
lazy_static = "1.4"
csv = "1.1"
basket = "0.0.5"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio = "1.8"
uuid = { version = "0.8", features = ["v5"] }
base64 = "0.12"
