[package]
name = "dino-park-packs_db-tests"
version = "0.4.0"
authors = ["Florian Merz <flomerz@gmail.com>"]
edition = "2018"
autotests = false

[[test]]
name = "dino-park-packs_db-tests"
path = "tests/lib.rs"
harness = true

[features]
default = []
localuserscope = ["dino_park_gate/localuserscope"]

[dev-dependencies]
dino-park-packs = { path = "../" }
cis_client = { git = "https://github.com/mozilla-iam/cis_client-rust", tag = "0.6.1", version = "0.6.1" }
cis_profile = { git = "https://github.com/mozilla-iam/cis_profile-rust", tag = "0.4.0", version = "0.4.0", features = ["aws", "vendored"] }
dino_park_gate = { git = "https://github.com/mozilla-iam/dino-park-gate", tag = "0.6.1", version = "0.6.1" }
dino_park_trust = { git = "https://github.com/mozilla-iam/dino-park-trust", tag = "0.0.5", version = "0.0.5" }
dino_park_guard = { git = "https://github.com/mozilla-iam/dino-park-guard", tag = "0.1.1", version = "0.1.1" }
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono", "serde_json"] }
diesel_migrations = "1.4"
actix-web = "2.0"
actix-rt = "1.0"
actix-http = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
futures = "0.3"
uuid = { version = "0.8", features = ["v5"] }
tokio = "0.2"
url = "2.1"
base64 = "0.12"